Use slf4j logging facade.